--- a/style.css
+++ b/style.css
@@ -42,3 +42,104 @@ header .info{
     font-weight: bold;
 }
 
+.nav-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo {
+    display: flex;
+    align-items: center;
+    font-weight: bold;
+    font-size: 24px;
+}
+
+nav ul {
+    display: flex;
+    list-style: none;
+}
+
+nav ul li {
+    margin: 0 15px;
+}
+
+nav ul li a {
+    color: #ccc;
+    text-decoration: none;
+    font-size: 14px;
+}
+
+.active-link {
+    color: #fff;
+    border-bottom: 2px solid #2ecc71;
+}
+
+.btn-primary {
+    background-color: #5e7e68;
+    color: white;
+    border: none;
+    padding: 8px 18px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+/* Hero Section */
+.hero {
+    text-align: center;
+    padding: 100px 0;
+    background: url(assets/hero-bg.png);
+    background-size: cover;
+}
+
+.badge {
+    background-color: #FFFFFF;
+    color: #2ecc71;
+    padding: 5px 15px;
+    border-radius: 20px;
+    font-size: 12px;
+}
+
+.hero h1 {
+    font-size: 48px;
+    margin: 20px 0;
+}
+
+.text-white{
+  color: #FFFFFF;
+}
+
+.text-green {
+    color: #2ecc71;
+}
+
+.hero p {
+    color: #ccc;
+    max-width: 700px;
+    margin: 0 auto 30px;
+}
+
+.btn-green {
+    background-color: #2ecc71;
+    color: white;
+    border: none;
+    padding: 12px 25px;
+    font-size: 16px;
+    border-radius: 5px;
+    margin-right: 10px;
+    cursor: pointer;
+    display: inline-flex;
+    align-items: center;
+    gap: 8px
+}
+
+.btn-outline {
+    background: transparent;
+    border: 1px solid #fff;
+    color: #fff;
+    padding: 12px 25px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+
